--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 1234",
-    "build": "next build",
-    "start": "next start -p 1234",
+    "dev": "next dev -p 1993",
+    "build": "npm run partytown && next build",
+    "partytown": "partytown copylib public/~partytown",
+    "start": "next start -p 1993",
     "lint": "next lint"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.8.0",
     "@fontsource/faustina": "^4.5.11",
     "@headlessui/react": "^1.7.13",
     "@reduxjs/toolkit": "^1.9.3",
@@ -18,13 +20,14 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "next": "13.2.1",
+    "next-auth": "^4.22.1",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.3",
-    "s": "^1.0.0",
+    "sharp": "^0.32.5",
     "swiper": "^9.1.1",
     "swr": "^2.1.0",
     "yup": "^1.0.2"
