--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.3",
+    "react-spinners": "^0.13.8",
     "sharp": "^0.32.5",
     "swiper": "^9.1.1",
     "swr": "^2.1.0",
